Fix FAB z-index

--- a/public/bundle.css
+++ b/public/bundle.css
@@ -6685,8 +6685,7 @@ h1.v-page-title {
   margin-left: auto; }
 
 .v-fab--absolute {
-  position: absolute;
-  z-index: 10; }
+  position: absolute; }
 
 @media (min-width: 840px) {
   .mdc-fab.v-button-fab-position-top {
